# hakai-datasets-repo-standard-tests

./: .fileignore  .gitignore  MANIFEST.in  README.md  action.yaml  action.yml  instrument-log.csv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: merge-to-production.yml  run-pytests.yml  run-tests.yaml  test-composite-action.yml  test-development.yaml
GEM_data_repo_tests/: __init__.py  test_filenames.py  test_files_folders_exists.py  utils.py
hakai_data_repo_tests/: __init__.py  __main__.py  conftest.py  default-config.yaml  test_data_dictionary.py  test_filenames.py  test_logs.py  test_matching_files.py  utils.py
test_repo/: config.yaml  instrument-log.csv  station-log.csv
tests/: README.md  test_files.py  test_repo.py
